# l0-paper

./: .gitignore  README.md  _quarto.yml  pyproject.toml
.github/workflows/: ci.yml
experiments/: README.md  build_full_candidate.py  build_targets.py  figures.py  merge_l2_runs.py  merge_seeds.py  run_poc.py  run_sweep.py  summarize_run.py
paper/: index.qmd  macros.tex  main.tex  populace_overview.md  preamble.tex  sampling_lit_review.md
paper/bibliography/: references.bib
paper/figures/: README.md  populace_pipeline.py
paper/sections/: abstract.tex  appendix.tex  background.tex  conclusion.tex  data.tex  discussion.tex  future_work.tex  introduction.tex  methodology.tex  results.tex
paper/tables/: calibration_accuracy.tex  paired_comparison.tex  presets.tex  sampling_comparison.tex  target_subset.tex
presentation/: README.md  TALKING_POINTS.md  eslint.config.mjs  next-env.d.ts  package-lock.json  package.json
presentation/app/: globals.css  layout.tsx  page.tsx
presentation/components/content/: AutoFitMath.tsx  BulletList.tsx  ContentCard.tsx  DonorFusion.tsx  EquationCard.tsx  FactAnatomy.tsx  Figure.tsx  FigurePlaceholder.tsx  FrameAnatomy.tsx  GeographyHierarchy.tsx  HardConcreteGate.tsx  LossBars.tsx  Math.tsx  PipelineDiagram.tsx  RegimeQuantileViz.tsx  ScaleLadder.tsx  StatNumber.tsx  TranslationTable.tsx  WeightFormats.tsx
presentation/components/core/: BasePathImage.tsx  Slide.tsx  SlideshowContext.tsx  SlideshowViewer.tsx
presentation/components/layout/: CoverSlide.tsx  EndSlide.tsx  SectionSlide.tsx  SlideTitle.tsx
presentation/lib/: base-path-image.ts  slide-url.ts  types.ts
presentation/scripts/: export-pdf.mjs
presentation/slides/: config.ts  l0-ima-2026.tsx
src/l0_paper/: __init__.py  _populace_driver.py  populace_smoke.py  precalibration.py
src/l0_paper/cli/: README.md  __init__.py  __main__.py  build_candidate.py  build_targets.py  demo.py  figures.py  fixed_lambda.py  merge_l2.py  merge_runs.py  paper.py  poc.py  summarize.py  sweep.py
src/l0_paper/experiments/: __init__.py  aggregate.py  artifacts.py  conditions.py  crunch.py  holdout.py  metrics.py  tables.py  target_loss.py
tests/: test_cli.py  test_end_to_end.py  test_experiments.py  test_populace_smoke.py
